--- a/rps.htm
+++ b/rps.htm
@@ -18,7 +18,11 @@
              <button id="rock">Rock</button>
              <button id="paper">Paper</button>
              <button id="scissors">Scissors</button>
-         </div>
+         </div> 
+         <details>
+             <summary>About This Game.</summary>
+             This Game is very easy to play which is genrally played .
+         </details>
          <script src="app.js"></script>
      </body>
 </html>
