Change in rps.htm

--- a/rps.htm
+++ b/rps.htm
@@ -21,7 +21,13 @@
          </div> 
          <details>
              <summary>About This Game.</summary>
-             This Game is very easy to play which is genrally played .
+             There are 3 entity.
+             <ol>
+                 <li>Rock</li>
+                 <li>Paper</li>
+                 <li>Scissors</li>
+             </ol>
+             Where we have to select any one of Them and winner is <em>Dessiced</em> on the basis of their <strong>Prioryty</strong>.
          </details>
          <script src="app.js"></script>
      </body>
