--- a/hello.htm
+++ b/hello.htm
@@ -10,7 +10,7 @@
 		<div id="content"></div>
 		<script>
 			const element=React.createElement('div',{title:'outer div'},React.createElement('h1',null,'Hello Alok!'));
-			React.render(element,document.getElementById('content'));
+			ReactDom.render(element,document.getElementById('content'));
 
 		</script>
 	</body>
